# 2023-hw-mini

./: CMakeLists.txt  LICENSE  README.md  Report.md.txt  assigment.md  pyproject.toml
.github/workflows/: ci.yml
assignment/: Readme.md  exercise01.md  exercise01.py  exercise02.json  exercise02.md  exercise02.py  exercise03.json  exercise03.md  exercise03.py  exercise04.json  exercise04.md  exercise04.py  pathlib.py  proj1-score.json  proj2-score-player1.json  proj2-score-player2.json  project01.json  project01.md  project01.py  project02.json  project02.md  project02.py
cmake/: pico_sdk_import.cmake
doc/: build.md  circuit.md  compiler.md  console.md  micropython.md  pico-sdk.md  rshell.md  thonny.md  trouble.md  upload.md
python/: communicate.py  temperature_led.py
scripts/: install_cmake.sh  install_cross_compiler.sh
src/: CMakeLists.txt  README.md
src/multicore/: CMakeLists.txt  fifo.c
src/pwm/led_fade/: pwm_led_fade.c
